test/corpus/comment.txt
========
Comments
========

{{!Comment}}

---

(template
  (comment_statement
    (_start_delimiter)
    (comment_content)
    (_end_delimiter)))

========
Multiline comments
========

{{!
Multiline
Comment}}

---

(template
  (comment_statement
    (_start_delimiter)
    (comment_content)
    (_end_delimiter)))

========
Comment with partial delimiters
========

{{!
  Example context:
  {
    "key": "value"
  }
}}

---

(template
  (comment_statement
    (_start_delimiter)
    (comment_content)
    (_end_delimiter)))

========
Comment with partial delimiters
========

{{!
  Example context:
  {
    "key": "value"
  }
}}

---

(template
  (comment_statement
    (_start_delimiter)
    (_end_delimiter)))
