test/corpus/statement.txt
========
Simple statement
========

{{name}}

---

(template
  (interpolation_statement
    (start_delimiter)
    (identifier)
    (end_delimiter))
  (text))

========
Triple statement
========

{{{name}}}

---

(template
  (triple_statement
    (start_delimiter)
    (identifier)
    (end_delimiter))
  (text))

========
Ampersand statement
========

{{&name}}

---

(template
  (ampersand_statement
    (start_delimiter)
    (identifier)
    (end_delimiter))
  (text))

========
Path statement
========

{{name.first}}

---

(template
  (interpolation_statement
    (start_delimiter)
    (path_expression
      (identifier)
      (identifier))
    (end_delimiter))
  (text))

========
Dot statement
========

{{.}}

---

(template
  (interpolation_statement
    (start_delimiter)
    (end_delimiter))
  (text))
